<resources>
    <string name="app_name">Room2</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="save_or_update">Save</string>
    <string name="clear">Clear</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="_0900034567">0900034567</string>
    <string name="chinex_gmail_com">chinex21@gmail.com</string>
    <string name="ihedioha_chinedu">Ihedioha Chinedu</string>
</resources>